# pepper_mtc

./: CMakeLists.txt  README.md  package.xml
core/: CMakeLists.txt  package.xml
core/include/stages/: mirror_grasp_generator.h
core/launch/: grasp.launch
core/src/: merger.cpp  object.cpp  pepper.cpp
core/src/stages/: CMakeLists.txt  bimanual_grasp_pose.cpp  mirror_grasp_generator.cpp
include/stages/: compute_ik_mod.h  mirror_grasp_generator.h  simple_mirror_grasp.h
msgs/: CMakeLists.txt  package.xml
msgs/action/: PepperExecuteSolution.action
msgs/srv/: PepperExecuteSolution.srv  PepperFindGraspPlan.srv  PepperVisualizeSolution.srv
src/: object.cpp  pepper.cpp
src/stages/: CMakeLists.txt  compute_ik_mod.cpp  mirror_grasp_generator.cpp  simple_mirror_grasp.cpp
srv/: PepperGrasping.srv
